# USTC_2020Fall_Data-Structure

./: README.md
PB19030861_王湘峰_实验/lab1_一元稀疏多项式加减器/: main.cpp  一元稀疏多项式计算器.sln  说明.txt
PB19030861_王湘峰_实验/lab1_一元稀疏多项式加减器/Debug/: 一元稀疏多项式加减器.ilk  一元稀疏多项式计算器.ilk
PB19030861_王湘峰_实验/lab1_一元稀疏多项式加减器/一元稀疏多项式加减器/: 一元稀疏多项式加减器.vcxproj
PB19030861_王湘峰_实验/lab1_一元稀疏多项式加减器/一元稀疏多项式加减器/Debug/: vc142.idb  一元稀疏多项式加减器.exe.recipe  一元稀疏多项式计算器.exe.recipe  (+1 more)
PB19030861_王湘峰_实验/lab2_离散事件模拟/: CMakeLists.txt  priority_queue.h  run.sh  simulation .cpp
PB19030861_王湘峰_实验/lab2_离散事件模拟/Lab/Lab2-Discrete Event Simulation/util/: util.h
PB19030861_王湘峰_实验/lab2_离散事件模拟/test/: test_memory.cc  test_priority_queue.cc  test_queue.cc  test_simulation.cc
PB19030861_王湘峰_实验/lab2_离散事件模拟/util/: util.cc
PB19030861_王湘峰_实验/lab3_哈夫曼编码/: File.h  Huffman.h  floder.h  main.cpp
PB19030861_王湘峰_实验/lab3_哈夫曼编码/hyy/: priority_queue.h
PB19030861_王湘峰_实验/lab3_哈夫曼编码/lab3/: Huffman.cpp  priority_queue.h  t.huff  t.txt
PB19030861_王湘峰_实验/lab3_哈夫曼编码/mine/: Huffman.cpp  lena.bmp.huff  new.cpp  t.txt.huff  temt.cpp
PB19030861_王湘峰_实验/lab3_哈夫曼编码/zsh/: BTree_huffman.cpp
PB19030861_王湘峰_实验/数据结构报告/报告1/: 实习报告1.docx
PB19030861_王湘峰_实验/数据结构报告/报告2/: 报告2.docx
作业/: README.md
实验/: README.md
实验/Lab1-多项式计算器/: README.md
实验/Lab1-多项式计算器/GUI version/: Project1.sln  Project1.vcxproj  README.md  多项式.cpp
实验/Lab1-多项式计算器/Normal Version/: 多项式.cpp
实验/Lab2-离散事件模拟/: README.md  build.sh  queue.h  simulation.cc
实验/Lab3-文件压缩与哈夫曼树/: File.h  Huffman.h  Huffmancode.sln  README.md  floder.h  main.cpp
实验/Lab3-文件压缩与哈夫曼树/test/: civil_code.txt
(+10 files in other folders)
